--- a/rbac/templates/rbac/static_menu.html
+++ b/rbac/templates/rbac/static_menu.html
@@ -1,6 +1,12 @@
 <div class="static-menu">
     {% for item in menu_list %}
-        <a href={{ item.url }}>
-            <span class="icon-wrap"><i class={{ item.icon }}></i></span> {{ item.title }}</a>
+        {% if item.url == current_url %}
+            <a href={{ item.url }} class="active">
+                <span class="icon-wrap"><i class={{ item.icon }}></i></span> {{ item.title }}</a>
+        {% else %}
+            <a href={{ item.url }}>
+                <span class="icon-wrap"><i class={{ item.icon }}></i></span> {{ item.title }}</a>
+        {% endif %}
+
     {% endfor %}
 </div>
