--- a/rbac/templates/rbac/static_menu.html
+++ b/rbac/templates/rbac/static_menu.html
@@ -2,7 +2,8 @@
     {% for item in menu_list %}
         {% if item.url == current_url %}
             <a href={{ item.url }} class="active">
-                <span class="icon-wrap"><i class={{ item.icon }}></i></span> {{ item.title }}</a>
+                <span class="icon-wrap"><i class={{ item.icon }}></i></span> {{ item.menu_title }}</a>
+            <a href="#">{{ item.title }}</a>
         {% else %}
             <a href={{ item.url }}>
                 <span class="icon-wrap"><i class={{ item.icon }}></i></span> {{ item.title }}</a>
